--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
+/* @import url('https://fonts.cdnfonts.com/css/helvetica-neue-55?styles=30125,16015,16016,16017,16018,16019,16008,16020,16022,16007,16009,16021,15981,15983,15985,15986,15987,15990,16012,16014,15980,15982,15984,15988,15989,16006,16013,15991,15992,15993,15994,15996,15995,30126,30127,30124,30128,30134,30129,30136,15999,16010,30123,16011,30130,30131,30135,30132,15997,30133,15998,16005');
+
+body {
+  font-family: "Helvetica Neue", sans-serif;
+} */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -43,6 +49,16 @@
     --chart-4: 43 74% 66%;
  
     --chart-5: 27 87% 67%;
+ 
+    --color-1: 0 100% 63%;
+ 
+    --color-2: 270 100% 63%;
+ 
+    --color-3: 210 100% 63%;
+ 
+    --color-4: 195 100% 63%;
+ 
+    --color-5: 90 100% 63%;
   }
  
   .dark {
@@ -78,6 +94,11 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+    --color-1: 0 100% 63%;
+    --color-2: 270 100% 63%;
+    --color-3: 210 100% 63%;
+    --color-4: 195 100% 63%;
+    --color-5: 90 100% 63%;
   }
 }
  
